<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Day2</string>
    <string name="title_activity_2">Activity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_3">Activity3</string>
    <string name="open_activity_3">open Activity 3</string>
    <string name="open_activity_2">open Activity 2</string>
    <string name="signaccount">SignAccount</string>
    <string name="activity_3">Activity 3</string>
    <string name="open_activity_2no">open Activity 2no</string>
    <string name="open_activity_2yes">open Activity 2yes</string>
    <string name="activity_2">Activity 2</string>
    <string name="open_activity2_2no" />
    <string name="open_activity3_2yes" />
    <string name="signup">signup</string>
    <string name="signin">signin</string>
    <string name="Login_id">TextView</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="timetostudy">TimeToStudy</string>
    <string name="email">Email</string>
    <string name="picture">Picture</string>
    <string name="start_timer" />
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="_00_00">00:00</string>
    <string name="finish_your_time">Finish your time</string>
    <string name="start">start</string>
    <string name="nothing">Nothing</string>
    <string name="Congratulations" />
    <string name="congratulations">Congratulations</string>
    <string name="PreviousScore" />
    <string name="PresentScore" />
    <string name="TotalScore" />
</resources>
