<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B0FF"
    android:orientation="vertical"
    tools:context="com.example.day2.TimerClockActivity">

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginBottom="503dp"
        android:autofillHints=""
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_input"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/edit_text_input"
        android:layout_toRightOf="@+id/edit_text_input"
        android:text="@string/set"
        android:textColor="#121010"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_00_00"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginStart="-172dp"
        android:layout_marginLeft="-172dp"
        android:layout_marginTop="142dp"
        android:layout_toEndOf="@+id/button_start_pause"
        android:layout_toRightOf="@+id/button_start_pause"
        android:text="@string/finish_your_time"
        android:textColor="#4C3311"
        android:textSize="24sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/total"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/present"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="TextView" />

</RelativeLayout>